first update index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Jan Philipp Girgott: Home</title>
-		<meta name="description" content="Jan Philipp Girgott: Home">
+		<title>Iris Brook: Home</title>
+		<meta name="description" content="Iris Brook: Home">
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/style.css">
 		<script src="https://kit.fontawesome.com/48988ab7bc.js" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
 		<nav>
 			<div class="nav-content">
 			  <div class="logo">
-				<a href="index.html">Jan Philipp Girgott</a>
+				<a href="index.html">Iris Brook</a>
 			  </div>
 			  <ul class="nav-links">
 				<li><a href="index.html">Home</a></li>
@@ -40,8 +40,10 @@
 		<div class="banner">
 			<div class="banner-text">
 				<h1 id="hi"></h1>
-				<h2>I am an aspiring data scientist currently completing my Master of Business Analytics at MIT Sloan. 
-					I have a background in consulting and earned management degrees from HEC Paris and WHU. Nice to meet you!
+				<h2>I am finishing my Master of Business Analytics at MIT Sloan, focusing on data science and a passion for integrating technology in business. 
+					I aim to drive efficiency and innovation in organizations by leveraging analytics to automate processes and inform decision-making. 
+					Skilled in statistical analysis, predictive modeling, and business strategy, I am eager to contribute to a forward-thinking team where creative and critical thinking are valued. 
+					My goal is to lead the way in using technology to transform business practices. 
 				</h2>
 			</div>
 			<div class="banner-image">
@@ -51,7 +53,7 @@
 
 		<script>
 			var i = 0;
-			var txt = 'Hi, my name is Jan!';
+			var txt = 'Hello, I am Iris Brook!';
 			var speed = 140; // Speed of typing
 			var repeat = 0;
 			var repeatLimit = 1; // Number of times to repeat the typing and deleting process
@@ -83,31 +85,31 @@
 				<div class="card">
 					<img src="images/cv.png">
 					<h3>Download my CV</h3>
-					<h4>Click on the button below to download my most up-to-date CV to learn more about my past experiences.</h4>
+					<h4>Click the button below to download my most up-to-date resume and learn more about my past experiences.</h4>
 					<a href="docs/cv.pdf" target="docs/cv.pdf" class="button">Download CV</a>
 				</div>
 				<div class="card">
 					<img src="images/projects.png">
 					<h3>Explore my Past Projects</h3>
-					<h4>This button will take you to my portfolio of machine learning and optimization projects.</h4>
+					<h4>This button will take you to my project portfolio in data science, optimization, and business strategy.</h4>
 					<a href="portfolio.html" class="button">Explore Portfolio</a>
 				</div>
 				<div class="card">
 					<img src="images/contact.jpg">
 					<h3>Reach out</h3>
-					<h4>Please feel free to shoot me a message at any time! I am available on all major social platforms, via phone, and email.</h4>
+					<h4>Reach out any time! I am available on all major social platforms via phone and email.</h4>
 					<a href="contact.html" class="button">View Contact Information</a>
 				</div>
 			</div>			
 		</div>
 		<div class="footer">
-			<h2>Jan Philipp Girgott</h2>
+			<h2>Iris Brook</h2>
 			<ul class="list-inline">
 				<li>
-					<a href="mailto:girgott@mit.edu"><i class="fa-regular fa-envelope"></i></a>
+					<a href="mailto:irisb211@mit.edu"><i class="fa-regular fa-envelope"></i></a>
 				</li>
 				<li>
-					<a href="https://www.linkedin.com/in/janphilippgirgott/"><i class="fab fa-linkedin"></i></a>
+					<a href="https://www.linkedin.com/in/iris-brook/"><i class="fab fa-linkedin"></i></a>
 				</li>
 			</ul>
 		</div>
