--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<div class="card">
 					<img src="images/cv.png">
 					<h3>Download my CV</h3>
-					<h4>Click the button below to download my most up-to-date resume and learn more about my past experiences.</h4>
+					<h4>Download my most up-to-date resume and learn more about my past experiences.</h4>
 					<a href="docs/cv.pdf" target="docs/cv.pdf" class="button">Download CV</a>
 				</div>
 				<div class="card">
