--- a/index.html
+++ b/index.html
@@ -1,15 +1,137 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Iris Brook: Home</title>
-		<meta name="description" content="Iris Brook: Home">
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="css/style.css">
-		<script src="https://kit.fontawesome.com/48988ab7bc.js" crossorigin="anonymous"></script>
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;700&display=swap" rel="stylesheet">
-		</head>
+<head>
+    <title>Iris Brook: Home</title>
+    <meta name="description" content="Iris Brook: Home">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/48988ab7bc.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Raleway', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        nav {
+            background-color: #004080;
+            color: white;
+            padding: 15px 20px;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+        }
+        .nav-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .logo a {
+            color: white;
+            font-size: 24px;
+            text-decoration: none;
+        }
+        .nav-links {
+            list-style: none;
+            padding: 0;
+        }
+        .nav-links li {
+            display: inline;
+            margin: 0 15px;
+        }
+        .nav-links a {
+            color: white;
+            text-decoration: none;
+            font-weight: 700;
+        }
+        .sticky {
+            background-color: #00254d;
+        }
+        .banner {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 100px 20px;
+            background-color: #004080;
+            color: white;
+        }
+        .banner-text {
+            max-width: 50%;
+        }
+        .banner-text h1 {
+            font-size: 48px;
+        }
+        .banner-text h2 {
+            font-size: 20px;
+            line-height: 1.6;
+        }
+        .banner-image img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+        .container {
+            padding: 50px 20px;
+            background-color: white;
+        }
+        .cards {
+            display: flex;
+            justify-content: space-around;
+        }
+        .card {
+            background-color: #f9f9f9;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            text-align: center;
+            width: 30%;
+        }
+        .card img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+        .card h3 {
+            margin: 15px 0;
+            color: #004080;
+        }
+        .card h4 {
+            color: #666;
+        }
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin-top: 15px;
+            background-color: #004080;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .footer {
+            background-color: #004080;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+        }
+        .footer ul {
+            list-style: none;
+            padding: 0;
+        }
+        .footer li {
+            display: inline;
+            margin: 0 10px;
+        }
+        .footer a {
+            color: white;
+            text-decoration: none;
+            font-size: 20px;
+        }
+    </style>
+</head>
 
 	<body>
 		<nav>
