--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 				</h2>
 			</div>
 			<div class="banner-image">
-				<img src="images/iris.jpg">
+				<img src="images/iris.png">
 			</div>
 		</div>
 
