--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
         }
         .banner-text h1 {
             font-size: 48px;
+		color: white;
         }
         .banner-text h2 {
             font-size: 20px;
             line-height: 1.6;
+		color: white;
         }
         .banner-image img {
             max-width: 100%;
@@ -112,10 +114,15 @@
             border-radius: 5px;
         }
         .footer {
-            background-color: #004080;
+            background-color: #750014;
             color: white;
             text-align: center;
             padding: 20px 0;
+        }
+	.footer h2,
+        .footer ul,
+        .footer a {
+            color: white; /* Ensure text is white */
         }
         .footer ul {
             list-style: none;
