--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Jan Philipp Girgott Contact</title>
-		<meta name="description" content="Jan Philipp Girgott: Home">
+		<title>Iris Brook Contact</title>
+		<meta name="description" content="Iris Brook: Home">
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/style.css">
 		<script src="https://kit.fontawesome.com/48988ab7bc.js" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
 		<nav>
 			<div class="nav-content">
 			  <div class="logo">
-				<a href="index.html">Jan Philipp Girgott</a>
+				<a href="index.html">Iris Brook</a>
 			  </div>
 			  <ul class="nav-links">
 				<li><a href="index.html">Home</a></li>
@@ -39,44 +39,40 @@
 		
 		<div class="banner">
 			<div class="banner-text">
-				<h1>Contact me!</h1>
+				<h1>Contact Information</h1>
 				<h2>
 				<table border="0">
 					<tr>
 						<td><i class="fa-solid fa-location-dot"></i> Address:</td>
-						<td> &ensp; 100 Memorial Drive, Apt. 11-20B, 02142 Cambridge, MA</a></td>
+						<td> &ensp; 50 Memorial Drive Apartment 15B, 02139 Cambridge, MA</a></td>
 					</tr>
 					<tr>
 					  <td><i class="fa-regular fa-envelope"></i> Email:</td>
-					  <td> &ensp; <a href="mailto:girgott@mit.edu">girgott@mit.edu</a></td>
+					  <td> &ensp; <a href="mailto:irisb211@mit.edu">irisb211@mit.edu</a></td>
 					</tr>
 					<tr>
-					  <td><i class="fa-sharp fa-solid fa-phone"></i> US phone:</td>
-					  <td> &ensp; (617) 251-7877</td>
-					</tr>
-					<tr>
-					  <td><i class="fa-sharp fa-solid fa-phone"></i> German phone:</td>
-					  <td> &ensp; +49 172 6840477</td>
+					  <td><i class="fa-sharp fa-solid fa-phone"></i> Phone:</td>
+					  <td> &ensp; (617) 992-6318</td>
 					</tr>
 					<tr>
 					  <td><i class="fab fa-linkedin"></i> LinkedIn:</td>
-					  <td> &ensp; <a href="https://www.linkedin.com/in/janphilippgirgott/">https://www.linkedin.com/in/janphilippgirgott/</a></td>
+					  <td> &ensp; <a href="https://www.linkedin.com/in/iris-brook/">https://www.linkedin.com/in/iris-brook/</a></td>
 					</tr>
 				  </table>
 				</h2>				  
 			</div>
 			<div class="banner-image">
-				<img src="images/jan.jpg">
+				<img src="images/mban headshot.png">
 			</div>
 		</div>
 		<div class="footer">
-			<h2>Jan Philipp Girgott</h2>
+			<h2>Iris Brook</h2>
 			<ul class="list-inline">
 				<li>
-					<a href="mailto:girgott@mit.edu"><i class="fa-regular fa-envelope"></i></a>
+					<a href="mailto:irisb211@mit.edu"><i class="fa-regular fa-envelope"></i></a>
 				</li>
 				<li>
-					<a href="https://www.linkedin.com/in/janphilippgirgott/"><i class="fab fa-linkedin"></i></a>
+					<a href="https://www.linkedin.com/in/iris-brook/"><i class="fab fa-linkedin"></i></a>
 				</li>
 			</ul>
 		</div>
