--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Jan Philipp Girgott: Portfolio</title>
-		<meta name="description" content="Jan Philipp Girgott: Portfolio">
+		<title>Iris Brook: Portfolio</title>
+		<meta name="description" content="Iris Brook: Portfolio">
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/style.css">
 		<script src="https://kit.fontawesome.com/48988ab7bc.js" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
 		<nav>
 			<div class="nav-content">
 			  <div class="logo">
-				<a href="index.html">Jan Philipp Girgott</a>
+				<a href="index.html">Iris Brook</a>
 			  </div>
 			  <ul class="nav-links">
 				<li><a href="index.html">Home</a></li>
@@ -40,7 +40,7 @@
 		<div class="banner">
 			<div class="banner-text">
 				<h1>Portfolio</h1>
-				<h2>On this page, you can find a selection of my past machine learning and optimization projects.</h2>
+				<h2>On this page, you can find a selection of my past projects in machine learning, optimization, analytics, and business strategy.</h2>
 			</div>
 		</div>
 
@@ -49,7 +49,7 @@
 				<div class="project_container">
 					<img src="images/leuven.jpg" class="project_container_image">
 					<div class="project_content_container">
-						<h3>Finding Optimal Locations of Mobility Hubs in Leuven, Belgium</h3>
+						<h3>Optimal Product Recommendation Ranking Framework for E-Commerce Platform</h3>
 						<h4>Optimized locations of mobility hubs for public transport/shared mobility in Leuven, Belgium with a multi-objective network flow model in 
 							Python, saving CO2 emissions of 6,300 cars daily (-12% CO2)</h4>
 						<h4><b>Context: </b>15.572 Analytics Lab at MIT</h4>
