--- a/contact.html
+++ b/contact.html
@@ -44,11 +44,11 @@
 				<table border="0">
 					<tr>
 						<td><i class="fa-solid fa-location-dot"></i> Address:</td>
-						<td> &ensp; 50 Memorial Drive Apartment 15B, 02139 Cambridge, MA</a></td>
+						<td> &ensp; 144 Grove Street, 02467 Chestnut Hill, MA</a></td>
 					</tr>
 					<tr>
 					  <td><i class="fa-regular fa-envelope"></i> Email:</td>
-					  <td> &ensp; <a href="mailto:irisb211@mit.edu">irisb211@mit.edu</a></td>
+					  <td> &ensp; <a href="mailto:iris.brook123@gmail.com">iris.brook123@gmail.com</a></td>
 					</tr>
 					<tr>
 					  <td><i class="fa-sharp fa-solid fa-phone"></i> Phone:</td>
@@ -69,7 +69,7 @@
 			<h2>Iris Brook</h2>
 			<ul class="list-inline">
 				<li>
-					<a href="mailto:irisb211@mit.edu"><i class="fa-regular fa-envelope"></i></a>
+					<a href="mailto:iris.brook123@gmail.com"><i class="fa-regular fa-envelope"></i></a>
 				</li>
 				<li>
 					<a href="https://www.linkedin.com/in/iris-brook/"><i class="fab fa-linkedin"></i></a>
