--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 		<div class="banner">
 			<div class="banner-text">
 				<h1 id="hi"></h1>
-				<h2>I am finishing my Master of Business Analytics at MIT Sloan, focusing on data science and a passion for integrating technology in business. 
+				<h2>Master of Business Analytics graduate from MIT Sloan with a focus on data science and a passion for integrating technology in business. 
 					I aim to drive efficiency and innovation in organizations by leveraging analytics to automate processes and inform decision-making. 
 					Skilled in statistical analysis, predictive modeling, and business strategy, I am eager to contribute to a forward-thinking team where creative and critical thinking are valued. 
 					My goal is to lead the way in using technology to transform business practices. 
@@ -235,7 +235,7 @@
 			<h2>Iris Brook</h2>
 			<ul class="list-inline">
 				<li>
-					<a href="mailto:irisb211@mit.edu"><i class="fa-regular fa-envelope"></i></a>
+					<a href="mailto:iris.brook123@gmail.com"><i class="fa-regular fa-envelope"></i></a>
 				</li>
 				<li>
 					<a href="https://www.linkedin.com/in/iris-brook/"><i class="fab fa-linkedin"></i></a>
