Update portfolio.html alab

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ly<!DOCTYPE html>
 <html>
 	<head>
 		<title>Iris Brook: Portfolio</title>
@@ -47,17 +47,16 @@
 		<div class="container">
 			<div class="project_containers">
 				<div class="project_container">
-					<img src="images/leuven.jpg" class="project_container_image">
+					<img src="images/abinbev.jpg_large" class="project_container_image">
 					<div class="project_content_container">
 						<h3>Optimal Product Recommendation Ranking Framework for E-Commerce Platform</h3>
-						<h4>Optimized locations of mobility hubs for public transport/shared mobility in Leuven, Belgium with a multi-objective network flow model in 
-							Python, saving CO2 emissions of 6,300 cars daily (-12% CO2)</h4>
+						<h4>This project aims to enhance the customer experience on AB InBev's B2B e-commerce app, BEES, by implementing a robust product ranking framework. 
+							Our primary goal was to provide users with personalized and dynamic product recommendations, thus improving user experience and driving sales.</h4>
 						<h4><b>Context: </b>15.572 Analytics Lab at MIT</h4>
-						<h4><b>Team members: </b>Giorgio Demarchi, Srikaran Boya, Matea Gjika</h4>
+						<h4><b>Team members: </b>Emily Hahn, Mackenzie Lees, Pranav Girish</h4>
 						<div class="button_container">
 							<a href="docs/alab_presentation.pdf" target="docs/alab_presentation.pdf" class="project_button"> <i class="fa-sharp fa-regular fa-file-powerpoint"></i> Presentation</a>
 							<a href="docs/alab_report.pdf" target="docs/alab_report.pdf" class="project_button"> <i class="fa-sharp fa-regular fa-file-pdf"></i> Project Report</a>
-							<a href="https://github.com/janphilipp-girgott/leuven" target="https://github.com/janphilipp-girgott/leuven" class="project_button"> <i class="fa-sharp fa-solid fa-code"></i> Code</a>
 						</div>
 					</div>
 				</div>
