--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@ ly<!DOCTYPE html>
 		<div class="container">
 			<div class="project_containers">
 				<div class="project_container">
-					<img src="images/abinbev.jpg_large" class="project_container_image">
+					<img src="images/abinbev.jpg" class="project_container_image">
 					<div class="project_content_container">
 						<h3>Optimal Product Recommendation Ranking Framework for E-Commerce Platform</h3>
 						<h4>This project aims to enhance the customer experience on AB InBev's B2B e-commerce app, BEES, by implementing a robust product ranking framework. 
