Update portfolio.html hodl

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,14 +63,15 @@ ly<!DOCTYPE html>
 				<div class="project_container">
 					<img src="images/hodl.jpg" class="project_container_image">
 					<div class="project_content_container">
-						<h3>Creating an LLM-based Chatbot to Answer Questions About Our Deep-Learning Class</h3>
-						<h4>Built a GPT 3.5-turbo-based chatbot in Python using Retrieval Augmented Generation (RAG) with semantic chunking and a Gradio user interface</h4>
+						<h3>Creating an LLM-based Chatbot to Form Recipes out of a List of Ingridients</h3>
+						<h4>This project aims to alleviate stress and reduce time spent on meal preparation for busy graduate students by generating cooking recipes based on available ingredients. 
+							We tuned several LLMs, including GPT, LLaMa, and Gemma, to generate recipes based on an inputted list of ingredients.</h4>
 						<h4><b>Context: </b>15.773 Hands-on Deep Learning at MIT</h4>
-						<h4><b>Team members: </b>Valentin Pinon, Sara Pasquino</h4>
+						<h4><b>Team members: Joe Kajon, Mackenzie Lees, Hayden Ratliff</b></h4>
 						<div class="button_container">
 							<a href="docs/hodl_presentation.pdf" target="docs/hodl_presentation.pdf" class="project_button"> <i class="fa-sharp fa-regular fa-file-powerpoint"></i> Presentation</a>
 							<a href="docs/hodl_report.pdf" target="docs/hodl_report.pdf" class="project_button"> <i class="fa-sharp fa-regular fa-file-pdf"></i> Project Report</a>
-							<a href="https://colab.research.google.com/drive/1ydfntyYo-BdlCNAS-9VWjdKfbu9-4gZP?usp=sharing" target="https://colab.research.google.com/drive/1ydfntyYo-BdlCNAS-9VWjdKfbu9-4gZP?usp=sharing" class="project_button"> <i class="fa-sharp fa-solid fa-code"></i> Code</a>
+							<a href="docs/hodl_code.pdf" target="docs/hodl_code.pdf" class="project_button"> <i class="fa-sharp fa-solid fa-code"></i> Code</a>
 						</div>
 					</div>
 				</div>
