Update portfolio.html opti

--- a/portfolio.html
+++ b/portfolio.html
@@ -95,15 +95,14 @@ ly<!DOCTYPE html>
 				<div class="project_container">
 					<img src="images/opti.png" class="project_container_image">
 					<div class="project_content_container">
-						<h3>Robust Multi-Period Portfolio Optimization</h3>
-						<h4>Investors optimize their portfolios over multiple periods depending on the predicted returns. 
-							In our project, we created an optimal portfolio consisting of the top 500 NASDAQ stocks (ranked by market capitalization)</h4>
+						<h3>Optimizing Bus Routes: Boston MBTA</h3>
+						<h4>This project integrates optimization techniques into the MBTA's extensive bus network to enhance efficiency, improve resource allocation, and elevate passenger experiences through data-driven decision-making. 
+							By analyzing ridership patterns, route efficiencies, and operational constraints, it demonstrates the transformative potential of big data and advanced analytics in reshaping public transportation systems.</h4>
 						<h4><b>Context: </b>15.093/6.7201 Optimization Methods at MIT</h4>
-						<h4><b>Team members: </b>Dido Stoikou</h4>
+						<h4><b>Team members: </b>Luca-Andrei Manea</h4>
 						<div class="button_container">
 							<a href="docs/opti_presentation.pdf" target="docs/opti_presentation.pdf" class="project_button"> <i class="fa-sharp fa-regular fa-file-powerpoint"></i> Presentation</a>
 							<a href="docs/opti_report.pdf" target="docs/opti_report.pdf" class="project_button"> <i class="fa-sharp fa-regular fa-file-pdf"></i> Project Report</a>
-							<a href="https://github.com/janphilipp-girgott/optimization_project" target="https://github.com/janphilipp-girgott/optimization_project" class="project_button"> <i class="fa-sharp fa-solid fa-code"></i> Code</a>
 						</div>	
 					</div>
 				</div>
