--- a/portfolio.html
+++ b/portfolio.html
@@ -78,17 +78,17 @@ ly<!DOCTYPE html>
 			</div>
 			<div class="project_containers">
 				<div class="project_container">
-					<img src="images/rl.jpg" class="project_container_image">
+					<img src="images/ml.jpg" class="project_container_image">
 					<div class="project_content_container">
-						<h3>Advancing Reinforcement Learning (RL) in SuperMario Bros.</h3>
-						<h4>In our project, we trained RL agents with different neural network architectures and reward functions.
-							The underlying algorithms used were Double Deep Q-Neural Networks and Proximal Policy Optimization.</h4>
+						<h3>Optimizing Airport Arrival Times Using Policy Trees</h3>
+						<h4>This project develops a machine learning methodology to forecast flight delays using Optimal Regression Trees and optimize airport arrival schedules with Policy Trees, improving travel planning and reducing waiting times. 
+							By combining predictive analytics with personalized decision-making frameworks, it aims to transform how passengers plan for airport arrivals and enhance their overall travel experience.</h4>
 						</h4>
-						<h4><b>Context: </b>6.8200 Computational Sensorimotor Learning at MIT</h4>
-						<h4><b>Team members: </b>Anthony Khaiat, Valentin Pinon</h4>
+						<h4><b>Context: </b>15.095 Machine Learning Under a Modern Optimization Lens at MIT</h4>
+						<h4><b>Team members: </b>Mackenzie Lees</h4>
 						<div class="button_container">
-							<a href="docs/rl_presentation.pdf" target="docs/rl_presentation.pdf" class="project_button"> <i class="fa-sharp fa-regular fa-file-powerpoint"></i> Presentation</a>
-							<a href="docs/rl_doc.pdf" target="docs/rl_doc.pdf" class="project_button"> <i class="fa-sharp fa-regular fa-file-pdf"></i> Technical Documentation</a>
+							<a href="docs/ml_presentation.pdf" target="docs/ml_presentation.pdf" class="project_button"> <i class="fa-sharp fa-regular fa-file-powerpoint"></i> Presentation</a>
+							<a href="docs/ml_doc.pdf" target="docs/ml_report.pdf" class="project_button"> <i class="fa-sharp fa-regular fa-file-pdf"></i> Project Report</a>
 						</div>	
 					</div>
 				</div>
