Update portfolio.html marketing

--- a/portfolio.html
+++ b/portfolio.html
@@ -109,17 +109,15 @@ ly<!DOCTYPE html>
 			</div>
 			<div class="project_containers">
 				<div class="project_container">
-					<img src="images/ml.jpg" class="project_container_image">
+					<img src="images/marketing.jpg" class="project_container_image">
 					<div class="project_content_container">
-						<h3>Classifying Loan Applications and Optimizing Interest Rates</h3>
-						<h4>In this project, we classified loan applications according to their probability of default (binary classification) and developed an optimization approach
-						to set interest rates for the accepted applications</h4>
-						<h4><b>Context: </b>15.095 Machine Learning Under a Modern Optimization Lens at MIT</h4>
-						<h4><b>Team members: </b>Valentin Pinon</h4>
+						<h3>Dashboard for Uber's General Manager in NYC</h3>
+						<h4>This project involves creating an interactive dashboard analyzing Uber's performance in New York City, comparing it to Lyft and taxis using 2021 TLC Trip Record Data to uncover actionable insights for market optimization. 
+							By incorporating filters for time, boroughs, and key metrics, along with visualizations of ride trends, fares, and geographic demand shifts, it equips Uber managers with strategic tools to enhance market presence and operational efficiency.</h4>
+						<h4><b>Context: </b>15.819 Marketing & Product Analytics at MIT</h4>
+						<h4><b>Team members: </b>Fiona Aga, Maxime Allouch, Vojta Machytka</h4>
 						<div class="button_container">
-							<a href="docs/ml_presentation.pdf" target="docs/ml_presentation.pdf" class="project_button"> <i class="fa-sharp fa-regular fa-file-powerpoint"></i> Presentation</a>
-							<a href="docs/ml_report.pdf" target="docs/ml_report.pdf" class="project_button"> <i class="fa-sharp fa-regular fa-file-pdf"></i> Project Report</a>
-							<a href="https://github.com/janphilipp-girgott/ml_loan_applications" target="https://github.com/janphilipp-girgott/ml_loan_applications" class="project_button"> <i class="fa-sharp fa-solid fa-code"></i> Code</a>
+							<a href="docs/marketing_dashboard.mp4" target="docs/marketing_dashboard.mp4" class="project_button"> <i class="fa-sharp fa-regular fa-file-powerpoint"></i> Dashboard</a>
 						</div>
 					</div>
 				</div>
