Update portfolio.html edge

--- a/portfolio.html
+++ b/portfolio.html
@@ -124,16 +124,16 @@ ly<!DOCTYPE html>
 				<div class="project_container">
 					<img src="images/edge.jpg" class="project_container_image">
 					<div class="project_content_container">
-						<h3>Predicting US Flight Delays</h3>
-						<h4>As part of this project, we predicted whether a flight will be delayed, the reason for the delay, and the magnitude of the delay. We focused on the three major airlines and airports
-							in our dataset.
+						<h3>Decoding Delta: A Comprehensive Exploration of Flight Delays and Cancellations</h3>
+						<h4>This project investigates Delta Air Lines' flight delays and cancellations in 2021, focusing on enhancing prediction accuracy and understanding operational challenges across airports, time periods, and days. 
+							By emphasizing nuanced feature generation, such as flight congestion and proximity to holidays, it aims to provide data-driven insights to improve airline operations and passenger experiences.
 						</h4>
 						<h4><b>Context: </b>Advanced Analytics Edge (15.072) at MIT</h4>
-						<h4><b>Team members: </b>Fiona Aga, Guillaume Allègre, Dido Stoikou</h4>
+						<h4><b>Team members: </b>Lucy Liu, Krishanu Datta, Devin Wasilefsky</h4>
 						<div class="button_container">
 							<a href="docs/edge_presentation.pdf" target="docs/edge_presentation.pdf" class="project_button"> <i class="fa-sharp fa-regular fa-file-powerpoint"></i> Presentation</a>
 							<a href="docs/edge_report.pdf" target="docs/edge_report.pdf" class="project_button"> <i class="fa-sharp fa-regular fa-file-pdf"></i> Project Report</a>
-							<a href="https://github.com/janphilipp-girgott/edge_flight_delays" target="https://github.com/janphilipp-girgott/edge_flight_delays" class="project_button"> <i class="fa-sharp fa-solid fa-code"></i> Code</a>
+							<a href="https://colab.research.google.com/drive/1tT2YqVpMcmuG-xr_6EI_6H0zYbynLs54?usp=sharing" target="https://colab.research.google.com/drive/1tT2YqVpMcmuG-xr_6EI_6H0zYbynLs54?usp=sharing" class="project_button"> <i class="fa-sharp fa-solid fa-code"></i> Code</a>
 						</div>
 					</div>
 				</div>
@@ -153,13 +153,13 @@ ly<!DOCTYPE html>
 		</div>
 		
 		<div class="footer">
-			<h2>Jan Philipp Girgott</h2>
+			<h2>Iris Brook</h2>
 			<ul class="list-inline">
 				<li>
-					<a href="mailto:girgott@mit.edu"><i class="fa-regular fa-envelope"></i></a>
+					<a href="mailto:iris.brook123@gmail.com"><i class="fa-regular fa-envelope"></i></a>
 				</li>
 				<li>
-					<a href="https://www.linkedin.com/in/janphilippgirgott/"><i class="fab fa-linkedin"></i></a>
+					<a href="https://www.linkedin.com/in/iris-brook/"><i class="fab fa-linkedin"></i></a>
 				</li>
 			</ul>
 		</div>
