--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@ ly<!DOCTYPE html>
 				<div class="project_container">
 					<img src="images/capstone.jpg" class="project_container_image">
 					<div class="project_content_container">
-						<h3>Creating an LLM-based Chatbot to Form Recipes out of a List of Ingridients</h3>
+						<h3>From Notes to Knowledge: Tailoring Future Client Interactions</h3>
 						<h4>This project aims to boost MFS sales team's efficiency with financial advisors by developing a tool that provides interaction history and recommends conversation topics that would drive sales. 
 							By using NLP technology, clustering, and a topic assignment model, it creates a summary document for sales professionals to better prepare for sales client meetings.</h4>
 						<h4><b>Context: </b>7-Month Capstone Project with MFS(Massachusetts Financial Services)</h4>
@@ -151,10 +151,9 @@ ly<!DOCTYPE html>
 							<a href="docs/hodl_presentation.pdf" target="docs/hodl_presentation.pdf" class="project_button"> <i class="fa-sharp fa-regular fa-file-powerpoint"></i> Presentation</a>
 							<a href="docs/hodl_report.pdf" target="docs/hodl_report.pdf" class="project_button"> <i class="fa-sharp fa-regular fa-file-pdf"></i> Project Report</a>
 							<a href="docs/hodl_code.pdf" target="docs/hodl_code.pdf" class="project_button"> <i class="fa-sharp fa-solid fa-code"></i> Code</a>
-						</div>
 					</div>
-				</div>				
-		</div>
+				</div>
+			</div>				
 		
 		<div class="footer">
 			<h2>Iris Brook</h2>
