--- a/portfolio.html
+++ b/portfolio.html
@@ -139,7 +139,8 @@ ly<!DOCTYPE html>
 					</div>
 				</div>
 			</div>
-			<div class="project_container">
+			<div class="project_containers">
+				<div class="project_container">
 					<img src="images/hodl.jpg" class="project_container_image">
 					<div class="project_content_container">
 						<h3>Creating an LLM-based Chatbot to Form Recipes out of a List of Ingridients</h3>
@@ -153,7 +154,7 @@ ly<!DOCTYPE html>
 							<a href="docs/hodl_code.pdf" target="docs/hodl_code.pdf" class="project_button"> <i class="fa-sharp fa-solid fa-code"></i> Code</a>
 					</div>
 				</div>
-			</div>				
+			</div>			
 		
 		<div class="footer">
 			<h2>Iris Brook</h2>
