--- a/portfolio.html
+++ b/portfolio.html
@@ -141,7 +141,7 @@
       </div>
       <div class="project_containers">
          <div class="project_container">
-            <img src="images/hodl.jpg" class="project_container_image">
+            <img src="images/hodl.png" class="project_container_image">
             <div class="project_content_container">
                <h3>Creating an LLM-based Chatbot to Form Recipes out of a List of Ingridients</h3>
                <h4>This project aims to alleviate stress and reduce time spent on meal preparation for busy graduate students by generating cooking recipes based on available ingredients. 
